--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,21 @@
 services:
-  main-service:
+  ewm-service:
     build: main-service
     ports:
       - "8080:8080"
     depends_on:
-      main-db:
+      ewm-db:
         condition: service_healthy
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://main-db:5431/main-db
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5431/ewm-db
       - SPRING_DATASOURCE_USERNAME=dbuser
       - SPRING_DATASOURCE_PASSWORD=12345
-  main-db:
+  ewm-db:
     image: postgres:16.1
     ports:
       - "5431:5431"
     environment:
-      - POSTGRES_DB=main-db
+      - POSTGRES_DB=ewm-db
       - POSTGRES_USER=dbuser
       - POSTGRES_PASSWORD=12345
     healthcheck:
