--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5431/main-db
+spring.datasource.url=jdbc:postgresql://localhost:5431/ewm-db
 spring.datasource.username=dbuser
 spring.datasource.password=12345
 
