--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,9 @@ services:
       - POSTGRES_DB=ewm-db
       - POSTGRES_USER=dbuser
       - POSTGRES_PASSWORD=12345
-    healthcheck:
+    volumes:
+      - ./volumes/ewm-db:/var/lib/ewm-db/data/
+   healthcheck:
       test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
       timeout: 5s
       interval: 5s
