--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.password=12345
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.initialization-mode=always
 spring.sql.init.mode=always
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 server.port=8080
