--- a/compose.yml
+++ b/compose.yml
@@ -1,3 +1,5 @@
+version: '3'
+
 services:
   ewm-service:
     build: main-service
@@ -13,14 +15,14 @@ services:
   ewm-db:
     image: postgres:16.1
     ports:
-      - "5431:5431"
+      - "5438:5438"
     environment:
       - POSTGRES_DB=ewm-db
       - POSTGRES_USER=dbuser
       - POSTGRES_PASSWORD=12345
     volumes:
       - ./volumes/ewm-db:/var/lib/ewm-db/data/
-   healthcheck:
+    healthcheck:
       test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
       timeout: 5s
       interval: 5s
@@ -40,7 +42,7 @@ services:
   stats-db:
     image: postgres:16.1
     ports:
-      - "5433:5432"
+      - "5433:5433"
     environment:
       - POSTGRES_DB=stats-db
       - POSTGRES_USER=dbuser
