--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5431/ewm-db
+spring.datasource.url=jdbc:postgresql://localhost:5438/ewm-db
 spring.datasource.username=dbuser
 spring.datasource.password=12345
 
@@ -10,3 +10,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 server.port=8080
+
+stats.server.url=http://localhost:9090
