--- a/stats-service/server/src/main/resources/application.properties
+++ b/stats-service/server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/stats-db
+spring.datasource.url=jdbc:postgresql://stats-db:5432/stats-db
 spring.datasource.username=dbuser
 spring.datasource.password=12345
 
